# BYBE-DB

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.db  Dockerfile.updater  README.md  build.rs  docker-compose.yml  rustfm.toml
migrations/: 20250220135307_add_status_column.sql  20250904102708_create_pf2e_tables.sql  20250904103437_create_sf2e_tables.sql  20250904144202_create_common_tables.sql  20260220174130_add_status_constraint.sql  20260223170020_create_hazard_table.sql  20260224104822_restructure_action_table.sql  20260510000001_create_pf2e_tables.sql  20260510000002_create_sf2e_tables.sql  20260510000003_create_common_tables.sql  20260605000004_create_range_tables.sql  20260615000005_add_trait_description.sql  20260616000006_add_attack_action_association.sql  20260616000006_add_trait_description.sql  20260628000007_add_conditions.sql  20260628000008_add_hazard_weapons.sql  20260629000009_update_hazard_table.sql  20260629000010_decouple_res_and_weak_from_creature.sql  20260629000011_add_hazard_association_tables.sql  20260630000012_add_values_to_conditions.sql
scripts/: convert_sqlite_to_postgresql.py
src/: game_system_handler.rs  main.rs
src/db/: aon_monster_compatibility_layer.sql  aon_npc_compatibility_layer.sql  db_handler_one.rs  db_handler_scales_table.rs  mod.rs
src/db/raw_queries/: scales.sql  update_mon_w_aon_data.sql  update_npc_w_aon_data.sql
src/schema/: bybe_condition.rs  bybe_creature.rs  bybe_creature_metadata_enum.rs  bybe_hazard.rs  bybe_item.rs  bybe_metadata_enum.rs  bybe_trait.rs  json_utils.rs  localize_loader.rs  mod.rs  publication_info.rs  status.rs
src/schema/foundry_schema/creature/: abilities.rs  foundry_creature.rs  mod.rs  perception.rs  saves.rs
src/schema/foundry_schema/creature/item/: items.rs  mod.rs  saving_throw.rs  spell.rs  weapon.rs
src/schema/source_schema/: description.rs  hp_values.rs  mod.rs  price_struct.rs  rules.rs  source_condition.rs  traits.rs
src/schema/source_schema/common/: description.rs  hp_values.rs  mod.rs  range_data.rs  rarity_size_traits.rs  saves.rs  traits.rs
src/schema/source_schema/creature/: abilities.rs  attributes.rs  details.rs  mod.rs  perception.rs  resistance.rs  resources.rs  saves.rs  sense.rs  source_creature.rs  traits.rs
src/schema/source_schema/creature/item/: action.rs  items.rs  mod.rs  saving_throw.rs  skill.rs  spell.rs  spell_casting_entry.rs  spellcasting_entry.rs  weapon.rs
src/schema/source_schema/hazard/: attributes.rs  mod.rs  source_hazard.rs
src/schema/source_schema/item/: material.rs  mod.rs  source_item.rs
src/utils/: game_system_enum.rs  json_manual_fetcher.rs  json_utils.rs  mod.rs
src/utils/tag/: check_tag_parser.rs  compendium_tag_parser.rs  dm_roll_parser.rs  dmg_tag_parser.rs  localize_tag_parser.rs  mod.rs  tag_parser.rs  template_tag_parser.rs
