[package]
name = "bybe-db"
version = "2.5.0"
authors = ["RakuJa"]

# Compiler info
edition = "2021"
rust-version = "1.81.0"

description = "a Database to help develop tools for Pathfinder 2e. It's built for the BYBE webservice"
readme = "README.md"
homepage = "https://backbybe.fly.dev/"
repository = "https://github.com/RakuJa/BYBE-DB"
license = "MIT"
keywords = ["database", "pathfinder"]
publish = false

build="build/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1.0.95"
maplit = "1.0.2"

once_cell = "1.20.2"
regex = "1.11.1"
evalexpr = "12.0.2"
capitalize = "0.3.4"

serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }

git2 = "0.20.0"

strum = {version= "0.27.1", features = ["derive"]}

sqlx = { version = "0.8.3", features = ["runtime-async-std", "sqlite"] }
dotenvy = "0.15.7"

[build-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1.0.95"
sqlx = { version = "0.8.3", features = ["runtime-async-std", "sqlite"] }
dotenv = "0.15.0"

[dev-dependencies]
rstest = "0.24.0"
