[package]
name = "bybe-db"
version = "2.6.1"
authors = ["RakuJa"]

# Compiler info
edition = "2024"
rust-version = "1.85.1"

description = "a Database to help develop tools for Pathfinder 2e. It's built for the BYBE webservice"
readme = "README.md"
homepage = "https://backbybe.fly.dev/"
repository = "https://github.com/RakuJa/BYBE-DB"
license = "MIT"
keywords = ["database", "pathfinder"]
publish = false

build="build/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1.0"
maplit = "1.0.2"

once_cell = "1.21.3"
regex = "1.11.1"
evalexpr = "12.0.2"
capitalize = "0.3.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

git2 = "0.20"

strum = {version= "0.27.1", features = ["derive"]}

sqlx = { version = "0.8.6", features = ["runtime-async-std", "sqlite"] }
dotenvy = "0.15.7"
log = "0.4"

[build-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1.0.95"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "sqlite"] }
dotenv = "0.15.0"

[dev-dependencies]
rstest = "0.25.0"
