
[package]
name = "bybe-db"
version = "4.1.1"
authors = ["RakuJa"]

# Compiler info
edition = "2024"
rust-version = "1.88.0"

description = "a Database to help develop tools for Pathfinder 2e. It's built for the BYBE webservice"
readme = "README.md"
homepage = "https://api.bybe.app/"
repository = "https://github.com/RakuJa/BYBE-DB"
license = "MIT"
keywords = ["database", "pathfinder"]
publish = false

build = "build/main.rs"

[features]
dry-run = []

[lints.rust]
unsafe_code = "forbid"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1.0"
maplit = "1.0.2"

once_cell = "1.21.3"
regex = "1.11.3"
evalexpr = "13.1.0"
capitalize = "0.3.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

git2 = "0.20"

strum = { version = "0.28.0", features = ["derive"] }

sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "migrate"] }
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
itertools = "0.14.0"
thiserror = "2.0"

[build-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
log = "0.4"
anyhow = "1.0"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "migrate"] }
dotenvy = "0.15"

[dev-dependencies]
rstest = "0.26.1"
